@@ -1,3 +1,7 @@
+2005-02-08 Paul Jakma <paul@dishone.st>
+
+	* ospf_packet.c: (various) Remove unneeded stream_set_putp abuse.
+
 2005-02-02 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* ospf_packet.c: (ospf_read) Fix bug: must check for state ISM_Down,
